added more marchine learning methods

--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from sklearn import naive_bayes, metrics\n",
     "from itertools import chain\n",
     "from math import log\n",
+    "from nltk import BigramAssocMeasures\n",
     "\n",
     "\n",
     "with open('test_dicts.txt', 'rb') as file:\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -110,8 +111,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normal weighting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +165,7 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -207,28 +215,6 @@
      "output_type": "stream",
      "text": [
       "accuracy: 0.659\n",
-      "[4. 5. 5. 5. 4. 1. 1. 1. 1. 5.]\n",
-      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# accuracy\n",
-    "print(\"accuracy:\", metrics.accuracy_score(predicted, goldStandard))\n",
-    "\n",
-    "print(predicted[:10])\n",
-    "print(goldStandard[:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "precision: 0.3888447463528511\n",
       "recall: 0.47690088739247527\n",
       "f1-measure: 0.4014620322982334\n"
@@ -236,11 +222,12 @@
     }
    ],
    "source": [
+    "# accuracy\n",
+    "print(\"accuracy:\", metrics.accuracy_score(predicted, goldStandard))\n",
+    "\n",
     "# precision, recall and f-measure\n",
     "print(\"precision:\", metrics.precision_score(predicted, goldStandard, average='macro'))\n",
-    "\n",
     "print(\"recall:\", metrics.recall_score(predicted, goldStandard, average='macro'))\n",
-    "\n",
     "print(\"f1-measure:\", metrics.f1_score(predicted, goldStandard, average='macro'))"
    ]
   },
@@ -248,12 +235,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning with plmi co-occurences"
+    "## Machine learning with tfidf weighting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.00614972 4.69626308 0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " ...\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         1.78976147 ... 0.         0.         0.        ]] [1. 1. 1. ... 5. 5. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fMat = np.zeros((sum([len(v) for v in train_lemmedreviews.values()]), len(features)))\n",
+    "labelsVec = np.zeros((sum([len(v) for v in train_lemmedreviews.values()])))\n",
+    "\n",
+    "\n",
+    "docId = 0\n",
+    "for score in range(1, 6):\n",
+    "    for rev in train_lemmedreviews[score]:\n",
+    "        labelsVec[docId] = score\n",
+    "        \n",
+    "        for word in rev:\n",
+    "            if word in features:\n",
+    "                fMat[docId, features[word]] += 1\n",
+    "\n",
+    "        docId += 1\n",
+    "        \n",
+    "\n",
+    "D=(sum([len(v) for v in train_lemmedreviews.values()]))\n",
+    "for column in range(len(features)): \n",
+    "    Dt = len(np.where(fMat[:,column] > 0)[0])   \n",
+    "    if Dt > 0: \n",
+    "        testMat[:, column] = testMat[:, column] * np.log(D/Dt)   \n",
+    "    fMat[:, column] = fMat[:, column] * np.log(D/Dt)\n",
+    "\n",
+    "    \n",
+    "print(fMat, labelsVec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = naive_bayes.MultinomialNB()\n",
+    "clf.fit(fMat, labelsVec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testMat = np.zeros((sum([len(v) for v in test_lemmedreviews.values()]), len(features)))\n",
+    "goldStandard = np.zeros((sum([len(v) for v in test_lemmedreviews.values()])))\n",
+    "\n",
+    "docId = 0\n",
+    "for score in range(1, 6):\n",
+    "    for rev in test_lemmedreviews[score]:\n",
+    "        goldStandard[docId] = score\n",
+    "\n",
+    "        for word in rev:\n",
+    "            if word in features:\n",
+    "                testMat[docId, features[word]] += 1\n",
+    "\n",
+    "        docId += 1\n",
+    "        \n",
+    "D=sum([len(v) for v in test_lemmedreviews.values()])\n",
+    "for column in range(len(features)): \n",
+    "    Dt = len(np.where(testMat[:,column] > 0)[0])\n",
+    "    if Dt > 0: \n",
+    "        testMat[:, column] = testMat[:, column] * np.log(D/Dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = clf.predict(testMat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.58\n",
+      "precision: 0.45392527659271736\n",
+      "recall: 0.4117167462604231\n",
+      "f1-measure: 0.42713456842360487\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accuracy\n",
+    "print(\"accuracy:\", metrics.accuracy_score(predicted, goldStandard))\n",
+    "\n",
+    "# precision, recall and f-measure\n",
+    "print(\"precision:\", metrics.precision_score(predicted, goldStandard, average='macro'))\n",
+    "print(\"recall:\", metrics.recall_score(predicted, goldStandard, average='macro'))\n",
+    "print(\"f1-measure:\", metrics.f1_score(predicted, goldStandard, average='macro'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine Learning with co-occurences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -327,35 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ppmi(o_11, r_1, c_1, n):\n",
-    "    \"\"\"\n",
-    "    Positive Pointwise Mutual Information (Church & Hanks, 1990)\n",
-    "    \n",
-    "    PMI is also available in NLTK:\n",
-    "    from nltk.metrics import BigramAssocMeasures\n",
-    "    print BigramAssocMeasures.pmi(8, (15828, 4675), 14307668)\n",
-    "    \"\"\"\n",
-    "    observed = o_11\n",
-    "    expected = (r_1*c_1)/n \n",
-    "    res = log(observed/expected,2)\n",
-    "    return max(0, res)\n",
-    "\n",
-    "def plmi(o_11, r_1, c_1, n):\n",
-    "    \"\"\"\n",
-    "    Positive Local Mutual Information, useful for leveraging the \n",
-    "    low-frequency bias of the PPMI\n",
-    "    \"\"\"\n",
-    "    res = o_11 * ppmi(o_11, r_1, c_1, n)\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -404,46 +500,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = naive_bayes.MultinomialNB()\n",
+    "clf.fit(fMat, labelsVec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n"
+      "[[0. 0. 2. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]] [1. 1. 1. ... 5. 5. 5.]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([   3,  124,  291,  459,  479, 3322, 5225], dtype=int32),)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "testMat = np.zeros((sum([len(v) for v in test_lemmedreviews.values()]), len(cooccs_features)))\n",
+    "goldStandard = np.zeros((sum([len(v) for v in test_lemmedreviews.values()])))\n",
+    "\n",
+    "docId = 0\n",
+    "for score in range(1, 6):\n",
+    "    for rev in test_lemmedreviews[score]:\n",
+    "        goldStandard[docId] = score\n",
+    "        \n",
+    "        span = 3\n",
+    "        cooccs_rev = Counter()\n",
+    "\n",
+    "        for i,w in enumerate(rev):\n",
+    "            #check all co-occurring words within a 3 word span \n",
+    "            span_range = list(range(max(i- span, 0), i)) \n",
+    "            span_range.extend(range(i+1, min(i + span + 1, len(rev)))) \n",
+    "            for cw in [rev[idx] for idx in span_range]:\n",
+    "                if cw != w and (cw, w) not in cooccs_rev:\n",
+    "                    cooccs_rev[(w, cw)] += 1\n",
+    "        \n",
+    "        \n",
+    "        for cooccs in list(cooccs_rev.keys()):\n",
+    "            if cooccs in cooccs_features:\n",
+    "                testMat[docId, cooccs_features[cooccs]] += cooccs_rev[cooccs]\n",
+    "\n",
+    "        docId += 1\n",
+    "        \n",
+    "print(testMat, goldStandard)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = clf.predict(testMat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.827\n",
+      "precision: 0.7468306842137113\n",
+      "recall: 0.7842147269439638\n",
+      "f1-measure: 0.762706508925357\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "# accuracy\n",
+    "print(\"accuracy:\", metrics.accuracy_score(predicted, goldStandard))\n",
+    "\n",
+    "# precision, recall and f-measure\n",
+    "print(\"precision:\", metrics.precision_score(predicted, goldStandard, average='macro'))\n",
+    "print(\"recall:\", metrics.recall_score(predicted, goldStandard, average='macro'))\n",
+    "print(\"f1-measure:\", metrics.f1_score(predicted, goldStandard, average='macro'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Machine Learning with plmi weighted co-occurences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ppmi(o_11, r_1, c_1, n):\n",
+    "    \"\"\"\n",
+    "    Positive Pointwise Mutual Information (Church & Hanks, 1990)\n",
+    "    \n",
+    "    PMI is also available in NLTK:\n",
+    "    from nltk.metrics import BigramAssocMeasures\n",
+    "    print BigramAssocMeasures.pmi(8, (15828, 4675), 14307668)\n",
+    "    \"\"\"\n",
+    "    observed = o_11\n",
+    "    expected = (r_1*c_1)/n \n",
+    "    res = log(observed/expected,2)\n",
+    "    return max(0, res)\n",
+    "\n",
+    "def plmi(o_11, r_1, c_1, n):\n",
+    "    \"\"\"\n",
+    "    Positive Local Mutual Information, useful for leveraging the \n",
+    "    low-frequency bias of the PPMI\n",
+    "    \"\"\"\n",
+    "    res = o_11 * ppmi(o_11, r_1, c_1, n)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-151-c686bcbdad8f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mlem_frequencies\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_lemmedreviews\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mlem_frequencies\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mlem_frequencies\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\floor kouwenberg\\appdata\\local\\programs\\python\\python37-32\\lib\\collections\\__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    564\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'expected at most 1 arguments, got %d'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCounter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 566\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    567\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    568\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__missing__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\floor kouwenberg\\appdata\\local\\programs\\python\\python37-32\\lib\\collections\\__init__.py\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    651\u001b[0m                     \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCounter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterable\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# fast path when counter is empty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    652\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 653\u001b[1;33m                 \u001b[0m_count_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    654\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    655\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "N = len(cooccs_candidate_feature.values())\n",
+    "plmis_lem_surface = Counter()\n",
+    "#print(test_lemmedreviews.values())\n",
+    "print(len(list(train_lemmedreviews.values())))\n",
+    "\n",
+    "lem_frequencies = []\n",
+    "for k in range(1,6):\n",
+    "    lem_frequencies.append(train_lemmedreviews[k])\n",
+    "    \n",
+    "lem_frequencies = Counter(chain(*lem_frequencies))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#for k,v in cooccs_candidate_feature.items():\n",
+    "#    plmis_lem_surface[k] = plmi(v, lem_frequencies[k[0]], lem_frequencies[k[1]], N)\n",
+    "\n",
+    "print(plmis_lem_surface.most_common(10))"
+   ]
   },
   {
    "cell_type": "code",
